# cpp-game

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: basic.frag  basic.frag.glsl  basic.frag.spv  basic.vert  basic.vert.glsl  basic.vert.spv
scripts/: compile_shader.sh
src/: main.cpp
src/components/: components.hpp  structs.hpp
src/core/ecs/: world.cpp  world.hpp
src/core/graphics/: renderer.cpp  renderer.hpp
src/core/vulkan/: vkapp.cpp  vkapp.hpp  vkpipeline.cpp  vkpipeline.hpp  vkshader.cpp  vkshader.hpp  vkstructs.hpp  vkswapchain.cpp  vkswapchain.hpp  vkutils.cpp  vkutils.hpp
src/entities/: player.cpp  player.hpp
src/utils/: assert.hpp  file.hpp  list.hpp  log.hpp
